feat: move garden/projects styles to custom file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@components/*": ["./src/components/*"],
       "@lib/*": ["./src/lib/*"],
       "@assets/*": ["./src/assets/*"],
+      "@styles/*": ["./src/styles/*"],
     },
   },
 }
