feat: add micromorph for page transitions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^5.16.6",
     "culori": "^4.0.2",
     "dayjs": "^1.11.19",
+    "micromorph": "^0.4.5",
     "unocss": "^66.5.12"
   },
   "devDependencies": {
